Fix link visibility.

--- a/themes/ra-theme/assets/css/colors.scss
+++ b/themes/ra-theme/assets/css/colors.scss
@@ -31,3 +31,4 @@ $deselected-tab-color: white;
 $deselected-tab-text-color: #0a0a0a;
 
 $emphatic-color: #cc4747;
+$link-color: #cc4747;
